3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Do not merge renamed items with differing custom names.
---
common/object.c: In can_merge() check for differing custom_name field.
server/c_object.c: In command_rename_item() try to merge the affected item.
Andreas Kirschbaum 2006-06-02

Do not merge locked and unlocked items.
---
common/object.c: In can_merge() do not ignore FLAG_INV_LOCKED anymore.
socket/item.c: In lock_item_cmd() try to merge the affected item.
Andreas Kirschbaum 2006-06-01

lib/artifacts: Fix typo to not anymore generate "boots of of steel".
lib/artifacts: Fix typo to make bows of Sorig work.
lib/archetypes, lib/treasures.bld: Rebuilt.
Andreas Kirschbaum 2006-06-01

Various bug fixes, related to the new map display code.
common/loader.c, common/loader.l: Add map_layer attribute so object can
   override what layer it should go on (fix for levitation boots).
common/map.c: Add support for map_layer to override layering.  Fix bug
   where if there were more objects than would fit on a layer, not all
   would be drawn (same object was duplicated onto multiple layers).
common/object.c: Add check for ob->map_layer in can_merge()
include/map.h: Add extern declaration for map_layer_name[]
include/object.h: Add map_layer to object.
socket/request.c:  In map1 compatibility mode, make sure we always
   send the player.
MSW 2006-05-29

server/monster.c: Only call animate_object() if object is animated -
    otherwise, animate_object() spews bunch of error about being called
    with non animated object.
MSW 2006-05-29


Monsters now cannot anymore see through earthwalls/monsters. This restores the